feature/api_gateway
Add javadoc